--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 header{
-    background-color: blueviolet;
+    background-color: rgb(3, 3, 3);
     position: fixed;
     left: 0px;
     top: 0px;
