--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ section p{
 
 
 footer{
-    background-color: black;
+    background-color: rgb(44, 44, 44);
     color: white;
     text-align: center;
     font-size: 0.8em;
