--- a/style.css
+++ b/style.css
@@ -6,39 +6,50 @@
 }
 html,body{
     font-family: Arial, Helvetica, sans-serif;
+    width: 100vw;
+    height: 100vh;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 header{
     background-color: rgb(65, 65, 65);
-    height: 55px;
+    display: block;
+    
 }
 
 
 
 header .sociais img{
-    padding: 5px;
+    position: relative;
+    left: 600px;
     width: 40px;
-    padding-left: 60px;
+    padding: 10px;
+ 
+
 }
-
-
 
 section {
 
     border: solid 1px rgb(156, 156, 156);
-    position: absolute;
-    min-width: 30px;
-    margin: 200px;
+    width: 500px;
+    display: block;
+    position: relative;
+    top: 150px;
+    margin: auto ;
     padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
     border-radius: 10px;
     box-shadow: 5px 5px 5px black;
 }
-section h1 {
+h1 {
     font-size: 2.5em;
     text-align: center;
     padding: 10px;
-   
+     text-shadow: 2px 2px 0px rgb(148, 129, 129);
 }
+   
+
 
 section p{
     font-size: 1.2em;
