--- a/style.css
+++ b/style.css
@@ -5,10 +5,9 @@
     padding: 0px;
 }
 html,body{
-    font-family: Arial, Helvetica, sans-serif;
-    width: 100vw;
-    height: 100vh;
-    background-size: contain;
+    
+    background-image: url(../imagens/rei.jpg);
+    font-family: Arial, Helvetica,sans-serif; 
     background-repeat: no-repeat;
 }
 
